# CleanShell

./: CMakeLists.txt  README.md  main.c
src/: main.c
src/desktop/: lingappdrawer.c  lingappdrawer.h  lingappitem.c  lingappitem.h  lingappviewpage.c  lingappviewpage.h  lingdesktop.c  lingdesktop.h
src/desktop/taskswitcher/: lingtaskswitcher.c  lingtaskswitcher.h
src/libling/: ling.c  ling.h  lingdatasaver.c  lingdatasaver.h  lingdots.c  lingdots.h  lingdragface.c  lingdragface.h  lingfixed.c  lingfixed.h  lingfixedgrid.c  lingfixedgrid.h  lingfolder.c  lingfolder.h  linggradient.c  linggradient.h  linggrid.c  linggrid.h  lingoperate.c  lingoperate.h  lingoverlay.c  lingoverlay.h  lingsysinfo.c  lingsysinfo.h  lingviewpager.c  lingviewpager.h  lingwallpaper.c  lingwallpaper.h
src/libling/assembly/: lingtimeviewer.c  lingtimeviewer.h
src/libling/keyboard/: lingkeyborad.c  lingkeyborad.h
src/libling/notify/: lingnotifyitem.h  lingnotifyviewer.h
src/ling/: lingdots.c  lingfixed.c  lingfixed.h  lingfixedview.c  lingfixedview.h  linggrid.c  linggrid.h  lingoperate.c  lingoperate.h  lingoverlay.c  lingoverlay.h  lingsysinfoupdater.c  lingsysinfoupdater.h  lingviewpager.c  lingviewpager.h  lingwallpaper.c
src/ling/keyboard/: lingkeyborad.c  lingkeyborad.h
src/ling/notify/: lingnotifyitem.c  lingnotifyviewer.c  lingnotifyviewer.h
src/lockscreen/: linglockscreen.c  linglockscreen.h
src/mobile-shell/: appdrawer.c  appdrawer.h  appfolder.h  appviewpage.c  appviewpage.h  desktop.c  desktop.h  desktopfolder.c  desktopfolder.h  desktopitem.c  desktopitem.h  mobileshell.c  mobileshell.h  taskswitcher.c  taskswitcher.h  wm.h
src/shell/: lingshell.c  lingshell.h
src/shell-base/lockscreen/: lockscreen.c  lockscreen.h
src/shell-base/statusbar/: controlcenter.c  controlcenter.h  notifycenter.c  notifycenter.h  statusbar.c  statusbar.h
src/shell-base/statusbar/items/: blelist.c  blelist.h  controlbutton.c  controlbutton.h  controlitem.c  controlitem.h  controlmedia.c  controlmedia.h  controlscale.c  controlscale.h  folder.c  folder.h  wlanlist.c  wlanlist.h
src/shell-base/wm/: wm.c  wm.h
src/statusbar/: lingcontrolcenter.c  lingcontrolcenter.h  lingnotifycenter.c  lingnotifycenter.h  lingstatusbar.c  lingstatusbar.h
src/statusbar/items/: lingblelist.c  lingblelist.h  lingcontrolbutton.c  lingcontrolbutton.h  lingcontrolmedia.c  lingcontrolmedia.h  lingcontrolscale.c  lingcontrolscale.h  lingfolder.c  lingfolder.h  lingwlanlist.c  lingwlanlist.h
src/taskswitcher/: lingtaskswitcher.c  lingtaskswitcher.h
ui/: Control Center.cmb  Notification Center.cmb  control center.ui  notification center.cmb  notification center.ui  style.css
